force-app/main/default/objects/VET_Product_Item__c/VET_Product_Item__c.object-meta.xml
<CustomObject>
    <label>Customer Product</label>
    <nameField>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Product Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>