force-app/main/default/objects/VET_Product_Item__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>VET_Product_Item__c</referenceTo>
    <relationshipLabel>Customer Products (Components)</relationshipLabel>
    <relationshipName>Product_Items</relationshipName>
    <type>Lookup</type>
</CustomField>