force-app/main/default/objects/VET_Product_Item__c/fields/VET_Last_Synch__c.field-meta.xml
<CustomField>
    <fullName>VET_Last_Synch__c</fullName>
    <label>VET Last Synch (GMT)</label>
    <type>DateTime</type>
</CustomField>