force-app/main/default/objects/VET_Product_Item__c/fields/VET_serviceappointment__c.field-meta.xml
<CustomField>
    <fullName>VET_serviceappointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Customer Products</relationshipLabel>
    <relationshipName>Customer_Products</relationshipName>
    <type>Lookup</type>
</CustomField>