force-app/main/default/objects/VET_Product_Item__c/fields/VET_SKU_dataUuid__c.field-meta.xml
<CustomField>
    <fullName>VET_SKU_dataUuid__c</fullName>
    <label>VET SKU dataUuid</label>
    <length>180</length>
    <type>Text</type>
</CustomField>