force-app/main/default/objects/VET_Product_Item__c/fields/VET_SKU_dataVid__c.field-meta.xml
<CustomField>
    <fullName>VET_SKU_dataVid__c</fullName>
    <label>VET SKU dataVid</label>
    <length>180</length>
    <type>Text</type>
</CustomField>