force-app/main/default/objects/VET_Product_Item__c/fields/VET_SKU_productDescription__c.field-meta.xml
<CustomField>
    <fullName>VET_SKU_productDescription__c</fullName>
    <label>Product Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>