force-app/main/default/objects/VET_Product_Item__c/fields/VET_SKU_productname__c.field-meta.xml
<CustomField>
    <fullName>VET_SKU_productname__c</fullName>
    <label>Product Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>