force-app/main/default/objects/VET_Product_Item__c/fields/VET_SKU_productparames_1__c.field-meta.xml
<CustomField>
    <fullName>VET_SKU_productparames_1__c</fullName>
    <label>Product Parameter 1</label>
    <length>180</length>
    <type>Text</type>
</CustomField>