force-app/main/default/objects/VET_Product_Item__c/fields/VET_SKU_productparames_label_2__c.field-meta.xml
<CustomField>
    <fullName>VET_SKU_productparames_label_2__c</fullName>
    <label>Product Label 2</label>
    <length>180</length>
    <type>Text</type>
</CustomField>