force-app/main/default/objects/VET_Product_Item__c/fields/VET_ViD__c.field-meta.xml
<CustomField>
    <fullName>VET_ViD__c</fullName>
    <label>VET Product ID</label>
    <length>180</length>
    <type>Text</type>
</CustomField>