force-app/main/default/objects/VET_Product_Item__c/fields/VETProduct_Owner__c.field-meta.xml
<CustomField>
    <fullName>VETProduct_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VETOwned_Products</relationshipName>
    <type>Lookup</type>
</CustomField>