force-app/main/default/objects/VET_Product_Item__c/fields/VETRelated_Product_Item__c.field-meta.xml
<CustomField>
    <fullName>VETRelated_Product_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product Item</label>
    <referenceTo>VET_Product_Item__c</referenceTo>
    <relationshipName>Related_Product_Items</relationshipName>
    <type>Lookup</type>
</CustomField>