force-app/main/default/objects/VET_Product_Item__c/recordTypes/Finished_Good.recordType-meta.xml
<RecordType>
    <fullName>Finished_Good</fullName>
    <active>true</active>
    <label>Finished Good</label>
</RecordType>