force-app/main/default/objects/VET_Product_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VET_SKU_productDescription__c</columns>
    <columns>VET_SKU_productname__c</columns>
    <columns>VET_ViD__c</columns>
    <columns>VETProduct_Owner__c</columns>
    <columns>VET_Last_Synch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>